force-app/main/default/objects/Journal__c/fields/Product_B_rnetestamente__c.field-meta.xml
<CustomField>
    <fullName>Product_B_rnetestamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Børnetestamente</label>
    <type>Checkbox</type>
</CustomField>