force-app/main/default/objects/Journal__c/fields/Product_Begunstigelseserkl_ring__c.field-meta.xml
<CustomField>
    <fullName>Product_Begunstigelseserkl_ring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Begunstigelseserklæring</label>
    <type>Checkbox</type>
</CustomField>