force-app/main/default/objects/Journal__c/fields/Product_Forh_ndssamtykke__c.field-meta.xml
<CustomField>
    <fullName>Product_Forh_ndssamtykke__c</fullName>
    <label>Product - Forhåndssamtykke</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>