force-app/main/default/objects/Journal__c/fields/Product_G_ldsbrev__c.field-meta.xml
<CustomField>
    <fullName>Product_G_ldsbrev__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Gældsbrev</label>
    <type>Checkbox</type>
</CustomField>