force-app/main/default/objects/Journal__c/fields/Product_Generalfuldmagt_for_Person_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Generalfuldmagt_for_Person_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Generalfuldmagt for Person 1</label>
    <type>Checkbox</type>
</CustomField>