force-app/main/default/objects/Journal__c/fields/Product_gtepagt__c.field-meta.xml
<CustomField>
    <fullName>Product_gtepagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Ægtepagt</label>
    <type>Checkbox</type>
</CustomField>