force-app/main/default/objects/Journal__c/fields/Product_Min_Sidste_Vilje__c.field-meta.xml
<CustomField>
    <fullName>Product_Min_Sidste_Vilje__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Min Sidste Vilje</label>
    <type>Checkbox</type>
</CustomField>