force-app/main/default/objects/Journal__c/fields/Product_Samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>Product_Samejeoverenskomst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Samejeoverenskomst</label>
    <type>Checkbox</type>
</CustomField>