force-app/main/default/objects/Journal__c/fields/Product_Testamente__c.field-meta.xml
<CustomField>
    <fullName>Product_Testamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product - Testamente</label>
    <type>Checkbox</type>
</CustomField>