force-app/main/default/objects/Journal__c/fields/Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Time__c</fullName>
    <label>Production Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>