force-app/main/default/objects/Journal__c/fields/Public_Registration_Count__c.field-meta.xml
<CustomField>
    <fullName>Public_Registration_Count__c</fullName>
    <label>Public Registration Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>