force-app/main/default/objects/Journal__c/fields/Related_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Event_ID__c</fullName>
    <label>Related Event ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>