force-app/main/default/objects/Journal__c/fields/Responsible_Lawyer_Name__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Lawyer_Name__c</fullName>
    <label>Responsible Lawyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>