force-app/main/default/objects/Journal__c/fields/Retskreds__c.field-meta.xml
<CustomField>
    <fullName>Retskreds__c</fullName>
    <label>Retskreds</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Københavns Byret</fullName>
            </value>
            <value>
                <fullName>Retten på Bornholm</fullName>
            </value>
            <value>
                <fullName>Retten i Esbjerg</fullName>
            </value>
            <value>
                <fullName>Retten på Frederiksberg</fullName>
            </value>
            <value>
                <fullName>Retten i Glostrup</fullName>
            </value>
            <value>
                <fullName>Retten i Helsingør</fullName>
            </value>
            <value>
                <fullName>Retten i Herning</fullName>
            </value>
            <value>
                <fullName>Retten i Hillerød</fullName>
            </value>
            <value>
                <fullName>Retten i Hjørring</fullName>
            </value>
            <value>
                <fullName>Retten i Holbæk</fullName>
            </value>
            <value>
                <fullName>Retten i Holstebro</fullName>
            </value>
            <value>
                <fullName>Retten i Horsens</fullName>
            </value>
            <value>
                <fullName>Retten i Kolding</fullName>
            </value>
            <value>
                <fullName>Retten i Lyngby</fullName>
            </value>
            <value>
                <fullName>Retten i Nykøbing F</fullName>
            </value>
            <value>
                <fullName>Retten i Næstved (hovedkontor)</fullName>
            </value>
            <value>
                <fullName>Retten i Næstved (bitingsted)</fullName>
            </value>
            <value>
                <fullName>Retten i Odense</fullName>
            </value>
            <value>
                <fullName>Retten i Randers</fullName>
            </value>
            <value>
                <fullName>Retten i Roskilde</fullName>
            </value>
            <value>
                <fullName>Retten i Svendborg</fullName>
            </value>
            <value>
                <fullName>Retten i Sønderborg</fullName>
            </value>
            <value>
                <fullName>Retten i Viborg</fullName>
            </value>
            <value>
                <fullName>Retten i Aalborg</fullName>
            </value>
            <value>
                <fullName>Retten i Aarhus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>