force-app/main/default/objects/Journal__c/fields/Search_Google_Drive_for_Journal_Number__c.field-meta.xml
<CustomField>
    <fullName>Search_Google_Drive_for_Journal_Number__c</fullName>
    <inlineHelpText>This field just searches Google Drive for the Journal Number. There being a link here, does not necessarily mean, that there is anything to find.</inlineHelpText>
    <label>Search Google Drive for Journal Number</label>
    <type>Url</type>
</CustomField>