force-app/main/default/objects/Journal__c/fields/Second_Include_Future_Children__c.field-meta.xml
<CustomField>
    <fullName>Second_Include_Future_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second_Include_Future_Children</label>
    <type>Checkbox</type>
</CustomField>