force-app/main/default/objects/Journal__c/fields/Send_custom_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_custom_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send custom SMS</label>
    <type>Checkbox</type>
</CustomField>