force-app/main/default/objects/Journal__c/fields/Sent_Awaiting_Customer_Overdue_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Sent_Awaiting_Customer_Overdue_Email_3__c</fullName>
    <label>Sent Awaiting Customer Overdue Email #3</label>
    <type>DateTime</type>
</CustomField>