force-app/main/default/objects/Journal__c/fields/Services__c.field-meta.xml
<CustomField>
    <fullName>Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(Samliv) Ægtepagt inkl. tinglysning</fullName>
            </value>
            <value>
                <fullName>(Samliv) Samejeoverenskomst</fullName>
            </value>
            <value>
                <fullName>(Samliv) Gældsbrev</fullName>
            </value>
            <value>
                <fullName>(Samliv) Arveafkald</fullName>
            </value>
            <value>
                <fullName>(Samliv) Arveforskudskontrakt</fullName>
            </value>
            <value>
                <fullName>(Sygdom) Fremtidsfuldmagt inkl. tinglysning</fullName>
            </value>
            <value>
                <fullName>(Sygdom) Fremtidsfuldmagt for virksomhedsejere inkl. tinglysning</fullName>
            </value>
            <value>
                <fullName>(Sygdom) Fuldmagtstjek</fullName>
            </value>
            <value>
                <fullName>(Bortgang) Singletestamente</fullName>
            </value>
            <value>
                <fullName>(Bortgang) Fællestestamente</fullName>
            </value>
            <value>
                <fullName>(Bortgang) Børnetestamente</fullName>
            </value>
            <value>
                <fullName>(Bortgang) Indbotestamente</fullName>
            </value>
            <value>
                <fullName>(Bortgang) Samtykke til uskiftet bo</fullName>
            </value>
            <value>
                <fullName>(Bortgang) Min sidste vilje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>