force-app/main/default/objects/Journal__c/fields/SMS_Flow__c.field-meta.xml
<CustomField>
    <fullName>SMS_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is ticked, the person will receive SMS reminders via our SMS 360 setup</description>
    <inlineHelpText>If this field is ticked, the person will receive SMS reminders via our SMS 360 setup</inlineHelpText>
    <label>SMS Flow</label>
    <type>Checkbox</type>
</CustomField>