force-app/main/default/objects/Journal__c/fields/stamdata_Civilstatus__c.field-meta.xml
<CustomField>
    <fullName>stamdata_Civilstatus__c</fullName>
    <label>Civilstatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>