force-app/main/default/objects/Journal__c/fields/stamdata_Har_du_b_rn__c.field-meta.xml
<CustomField>
    <fullName>stamdata_Har_du_b_rn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du børn?</label>
    <type>Checkbox</type>
</CustomField>