force-app/main/default/objects/Journal__c/fields/stamdata_Har_du_I_b_rn__c.field-meta.xml
<CustomField>
    <fullName>stamdata_Har_du_I_b_rn__c</fullName>
    <label>Har du/I børn?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>