force-app/main/default/objects/Journal__c/fields/stamdata_Mere_end_t_barn__c.field-meta.xml
<CustomField>
    <fullName>stamdata_Mere_end_t_barn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mere end ét barn?</label>
    <type>Checkbox</type>
</CustomField>