force-app/main/default/objects/Journal__c/fields/Sticky_Sender__c.field-meta.xml
<CustomField>
    <fullName>Sticky_Sender__c</fullName>
    <formula>&apos;Fam Jurist&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sticky Sender</label>
    <type>Text</type>
</CustomField>