force-app/main/default/objects/Journal__c/fields/Surviving_inheritance_as_prenuptial__c.field-meta.xml
<CustomField>
    <fullName>Surviving_inheritance_as_prenuptial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surviving inheritance as prenuptial</label>
    <type>Checkbox</type>
</CustomField>