force-app/main/default/objects/Journal__c/fields/Tax_free_presents__c.field-meta.xml
<CustomField>
    <fullName>Tax_free_presents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax free presents</label>
    <type>Checkbox</type>
</CustomField>