force-app/main/default/objects/Journal__c/fields/Telefonnummer_Gennemgang_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Telefonnummer_Gennemgang_Calendly__c</fullName>
    <label>Telefonnummer Gennemgang (Calendly)</label>
    <type>Phone</type>
</CustomField>