force-app/main/default/objects/Journal__c/fields/Template_outdated__c.field-meta.xml
<CustomField>
    <fullName>Template_outdated__c</fullName>
    <formula>IF( Document_generated_on__c &lt; LastModifiedDate , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template outdated</label>
    <type>Checkbox</type>
</CustomField>