force-app/main/default/objects/Journal__c/fields/Testament_fall_on_divorce__c.field-meta.xml
<CustomField>
    <fullName>Testament_fall_on_divorce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Testament fall on divorce</label>
    <type>Checkbox</type>
</CustomField>