force-app/main/default/objects/Journal__c/fields/Testament_Type__c.field-meta.xml
<CustomField>
    <fullName>Testament_Type__c</fullName>
    <label>Testament Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Witness</fullName>
                <label>Vidne</label>
            </value>
            <value>
                <fullName>Registrar</fullName>
                <label>Notar</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>