force-app/main/default/objects/Journal__c/fields/Testament_valid_on_surviving_remarriag_P__c.field-meta.xml
<CustomField>
    <fullName>Testament_valid_on_surviving_remarriag_P__c</fullName>
    <label>Testament valid on surviving remarriage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Ja</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Nej</label>
            </value>
            <value>
                <fullName>Missing</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>