force-app/main/default/objects/Journal__c/fields/Time_of_Current_Journal_States__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Current_Journal_States__c</fullName>
    <label>Time of Current Journal States</label>
    <type>DateTime</type>
</CustomField>