force-app/main/default/objects/Journal__c/fields/Time_of_Finalization_Emails_Sent__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Finalization_Emails_Sent__c</fullName>
    <label>Time of Finalization Emails Sent</label>
    <type>DateTime</type>
</CustomField>