force-app/main/default/objects/Journal__c/fields/Time_of_Trustpilot_Request__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Trustpilot_Request__c</fullName>
    <label>Time of Trustpilot Request</label>
    <type>DateTime</type>
</CustomField>