force-app/main/default/objects/Journal__c/fields/Tinglysning_By__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tinglysning By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Journals2</relationshipName>
    <type>Lookup</type>
</CustomField>