force-app/main/default/objects/Journal__c/fields/Tinglysning_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tinglysning Completed</label>
    <type>Checkbox</type>
</CustomField>