force-app/main/default/objects/Journal__c/fields/Tinglysning_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_Completed_Date__c</fullName>
    <label>Tinglysning Completed Date</label>
    <type>Date</type>
</CustomField>