force-app/main/default/objects/Journal__c/fields/Tinglysning_Ended__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_Ended__c</fullName>
    <label>Tinglysning Ended</label>
    <type>DateTime</type>
</CustomField>