force-app/main/default/objects/Journal__c/fields/Tinglysning_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tinglysning in Progress</label>
    <type>Checkbox</type>
</CustomField>