force-app/main/default/objects/Journal__c/fields/Tinglysning_Started__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_Started__c</fullName>
    <label>Tinglysning Started</label>
    <type>DateTime</type>
</CustomField>