force-app/main/default/objects/Journal__c/fields/Tinglysning_Status__c.field-meta.xml
<CustomField>
    <fullName>Tinglysning_Status__c</fullName>
    <label>Tinglysning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Public_Registration_Status</valueSetName>
    </valueSet>
</CustomField>