force-app/main/default/objects/Journal__c/fields/Total_Process_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Process_Time__c</fullName>
    <formula>Pre_Sale_Time__c +  Post_Sale_Time__c +  Production_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Process Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>