force-app/main/default/objects/Journal__c/fields/Trustpilot_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_Customer_Name__c</fullName>
    <label>Trustpilot Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>