force-app/main/default/objects/Journal__c/fields/Trustpilot_Link_to_Review__c.field-meta.xml
<CustomField>
    <fullName>Trustpilot_Link_to_Review__c</fullName>
    <label>Trustpilot Link to Review</label>
    <type>Url</type>
</CustomField>